--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,6 @@ This is a simple customer API service developed using Spring Boot and Apache Sol
 
 === Local Set up
 
-To run this service locally follow these steps:
-* Run Apache Solr locally on port 8983
-* Run :  `gradle bootRun`
+To run this service locally follow these steps: 
+1. Run Apache Solr locally on port 8983 
+2.  Run :  `gradle bootRun` 
