--- a/README.adoc
+++ b/README.adoc
@@ -3,8 +3,8 @@
 This is a simple customer API service developed using Spring Boot and Apache Solr
 
 
-=== Local Set up
+=== Local Set up 
 
-To run this service locally follow these steps: 
-1. Run Apache Solr locally on port 8983 
-2.  Run :  `gradle bootRun` 
+To run this service locally follow these steps: <br />
+1. Run Apache Solr locally on port 8983 <br />
+2.  Run :  `gradle bootRun` <br />
